# py-bootcamp

./: .gitignore  day-1-band-name-generator.py  day-12-guess-the-number.py  day-15-coffee-machine.py  day-18-hirst-painting.py  day-2-tip-calculator.py  day-3-treasure-island.py  day-4-rock-paper-scissors.py  day-5-password-generator.py  day-8-ceaser-cipher.py  day-9-blind-auction.py
day-10-calculator/: README.md  calc.py  main.py
day-11-blackjack/: README.md  cards.py  game.py  main.py
day-14-higher-lower/: README.md  channels.json  main.py  pyproject.toml  setup.py
day-16-oop-coffee-machine/: main.py  menu.py
day-17-quiz-game/: README.md  main.py  quiz.py
day-19-turtle-race/: main.py  runner.py
day-21-snake/: food.py  main.py  scoreboard.py  snake.py
day-22-pong/: ball.py  main.py  paddle.py  scoreboard.py
day-23-turtle-crossing/: car_manager.py  main.py  player.py  scoreboard.py
day-24-mail-merge/: main.py
day-25-us-states-game/: game.py  main.py  pyproject.toml  setup.py  states-v2.csv
day-26-nato-alphabet/: main.py  pyproject.toml
day-29-password-manager/: db.py  main.py  ui.py
day-31-flashcards/: .gitignore  README.md  card.py  deck.py  main.py  pyproject.toml
day-37-habit-tracking/: README.md  health.py  main.py  pixela.py  pyproject.toml
day-48-web-game-bot/: main.py  pyproject.toml
day-7-hangman/: hangman_art.py  main.py
day-9-blind-auction/: items.json  main.py
