[tool.poetry]
name = "day-14-higher-lower"
version = "1.0.0"
description = ""
authors = ["James Weisner <james.weisner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
