[tool.poetry]
name = "day-31-flashcards"
version = "1.0.0"
description = ""
authors = ["James Weisner <james.weisner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
googletrans = "^4.0.0rc1"
gTTS = "^2.5.1"
pygame = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
