[tool.poetry]
name = "day-37-habit-tracking"
version = "1.0.0"
description = ""
authors = ["James Weisner <james.weisner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
