[tool.poetry]
name = "day-48-web-game-bot"
version = "0.1.0"
description = ""
authors = ["jamesweisner <james.weisner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
